# PushToTalk

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  PKGBUILD  README.md  Settings.cpp  Settings.h  install.sh  main.cpp  ptt-client.service  ptt-server.service  ptt-server.service.in  pttcpp.service  pushtotalk.install
.devcontainer/: Dockerfile  devcontainer.json
src/: InputHandler.cpp  InputHandler.h  Settings.cpp  Settings.h  Utility.cpp  Utility.h  VirtualInputProxy.cpp  main.cpp  push_to_talk.cpp  push_to_talk.h
src/client/: InputClient.cpp  InputClient.h  PushToTalkApp.cpp  PushToTalkApp.h  client_main.cpp  push_to_talk.cpp  push_to_talk.h
src/client/gui/: SettingsGUI.cpp  SettingsGUI.h
src/client/utilities/: AudioUtilities.cpp  AudioUtilities.h  Settings.cpp  Settings.h  VirtualMicrophone.cpp  VirtualMicrophone.h
src/common/: Settings.cpp  Settings.h
src/common/device/: DeviceCapabilities.cpp  DeviceCapabilities.h
src/common/protocol/: Packets.h
src/common/utilities/: Utility.cpp  Utility.h
src/common/utilities/numbers/: Conversion.cpp  Conversion.h
src/device/: VirtualInputProxy.cpp  VirtualInputProxy.h
src/gui/: SettingsGUI.cpp  SettingsGUI.h
src/server/: InputProxyServer.cpp  InputProxyServer.h  server_main.cpp
src/server/cli/: CommandLine.cpp  CommandLine.h
src/server/device/: VirtualInputProxy.cpp  VirtualInputProxy.h
src/utilities/numbers/: Conversion.h
